# gl_playground

./: .gitignore  Cargo.toml  build.rs
libs/gl/: Cargo.toml  build.rs
src/: camera.rs  lib.rs  main.rs  program.rs  texture.rs  vertex.rs
src/shaders/: basic.frag  basic.vert
