[package]
name = "gl_playground"
version = "0.1.0"
edition = "2021"

# Dependencies

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
env_logger = "0.10"
glfw = { version = "0.50", features = ["log"] }
image = { version = "0.24", features = [
	"jpeg",
	"jpeg_rayon",
	"webp",
	"png",
], default-features = false }
log = "0.4"
thiserror = "1.0"

gl = { path = "./libs/gl" }
cfg-if = "1.0.0"
glam = "0.22.0"

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"

# Features

[features]
gl_debug = ["gl/debug"]
wayland = ["glfw/wayland"]

# Profiles

[profile.dev]
debug-assertions = true
opt-level = 1

[profile.dev.package."*"]
debug-assertions = true
opt-level = 3

[profile.release]
debug = 1

[profile.dist]
inherits = "release"
debug = 0
